k8s/apps/dl/apps-v1.Deployment-dl.yaml
# yaml-language-server: $schema=../../../schemas/k8s/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dl
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: dl
  template:
    metadata:
      labels:
        name: dl
    spec:
      containers:
      - env:
        - name: PGID
          value: "100"
        - name: PUID
          value: "1032"
        - name: TZ
          value: America/New_York
        image: linuxserver/radarr:3.2.2.5080-ls119
        imagePullPolicy: IfNotPresent
        name: radarr
        ports:
        - containerPort: 7878
          name: http
        volumeMounts:
        - mountPath: /config
          name: dl
          subPath: radarr-config
        - mountPath: /movies
          name: dl
          subPath: movies
        - mountPath: /downloads
          name: dl
          subPath: downloads
      - env:
        - name: PGID
          value: "100"
        - name: PUID
          value: "1032"
        - name: TZ
          value: America/New_York
        image: linuxserver/sonarr:3.0.6.1342-ls127
        imagePullPolicy: IfNotPresent
        name: sonarr
        ports:
        - containerPort: 8989
          name: http
        volumeMounts:
        - mountPath: /config
          name: dl
          subPath: sonarr-config
        - mountPath: /tv
          name: dl
          subPath: tv
        - mountPath: /downloads
          name: dl
          subPath: downloads
      - env:
        - name: PGID
          value: "100"
        - name: PUID
          value: "1032"
        - name: TZ
          value: America/New_York
        image: linuxserver/sabnzbd:3.4.2
        imagePullPolicy: IfNotPresent
        name: sabnzbd
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /config
          name: dl
          subPath: sabnzbd-config
        - mountPath: /downloads
          name: dl
          subPath: downloads
        - mountPath: /incomplete-downloads
          name: dl
          subPath: incomplete-downloads
      - env:
        - name: PGID
          value: "100"
        - name: PUID
          value: "1032"
        - name: TZ
          value: America/New_York
        image: linuxserver/deluge:2.0.5
        imagePullPolicy: IfNotPresent
        name: deluge
        ports:
        - containerPort: 8112
          name: http
        - containerPort: 31248
          name: bt
        volumeMounts:
        - mountPath: /config
          name: dl
          subPath: deluge-config
        - mountPath: /downloads
          name: dl
          subPath: downloads
        - mountPath: /incomplete-downloads
          name: dl
          subPath: incomplete-downloads
      volumes:
      - name: dl
        persistentVolumeClaim:
          claimName: media-repo
