k8s/apps/dl/deployment.yaml
# yaml-language-server: $schema=../../../schemas/k8s/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dl
spec:
  selector: {}
  template:
    spec:
      containers:
      - env:
        - name: PGID
          value: "100"
        - name: PUID
          value: "1032"
        - name: TZ
          value: America/New_York
        image: linuxserver/radarr:4.3.2
        imagePullPolicy: IfNotPresent
        name: radarr
        ports:
        - containerPort: 7878
          name: http
        volumeMounts:
        - mountPath: /config
          name: dl
          subPath: radarr-config
        - mountPath: /movies
          name: dl
          subPath: movies
        - mountPath: /downloads
          name: dl
          subPath: downloads
      - env:
        - name: PGID
          value: "100"
        - name: PUID
          value: "1032"
        - name: TZ
          value: America/New_York
        image: linuxserver/sonarr:3.0.9
        imagePullPolicy: IfNotPresent
        name: sonarr
        ports:
        - containerPort: 8989
          name: http
        volumeMounts:
        - mountPath: /config
          name: dl
          subPath: sonarr-config
        - mountPath: /tv
          name: dl
          subPath: tv
        - mountPath: /downloads
          name: dl
          subPath: downloads
      - env:
        - name: PGID
          value: "100"
        - name: PUID
          value: "1032"
        - name: TZ
          value: America/New_York
        image: linuxserver/sabnzbd:3.7.2
        imagePullPolicy: IfNotPresent
        name: sabnzbd
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /config
          name: dl
          subPath: sabnzbd-config
        - mountPath: /downloads
          name: dl
          subPath: downloads
        - mountPath: /incomplete-downloads
          name: dl
          subPath: incomplete-downloads
      - env:
        - name: PGID
          value: "100"
        - name: PUID
          value: "1032"
        - name: TZ
          value: America/New_York
        image: linuxserver/deluge:2.0.5
        imagePullPolicy: IfNotPresent
        name: deluge
        ports:
        - containerPort: 8112
          name: http
        - containerPort: 31248
          name: bt
        volumeMounts:
        - mountPath: /config
          name: dl
          subPath: deluge-config
        - mountPath: /downloads
          name: dl
          subPath: downloads
        - mountPath: /incomplete-downloads
          name: dl
          subPath: incomplete-downloads
      volumes:
      - name: dl
        hostPath:
          path: /mnt/k8s/media-repo
          type: Directory
