k8s/apps/dl/service.yaml
# yaml-language-server: $schema=../../../schemas/k8s/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: dl
spec:
  ports:
  - name: radarr-http
    port: 7878
    targetPort: 7878
  - name: sonarr-http
    port: 8989
    targetPort: 8989
  - name: sabnzbd-http
    port: 8080
    targetPort: 8080
  - name: deluge-http
    port: 8112
    targetPort: 8112
  - name: deluge-bt
    port: 31248
    targetPort: 31248
---
# yaml-language-server: $schema=../../../schemas/k8s/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: dl-deluge-bt
spec:
  ports:
  - name: deluge-bt-tcp
    nodePort: 31248
    port: 31248
    targetPort: bt
  type: NodePort
