k8s/apps/dl/ingress.yaml
# yaml-language-server: $schema=../../../schemas/k8s/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dl
spec:
  rules:
  - host: radarr.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dl
            port:
              name: radarr-http
  - host: deluge.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dl
            port:
              name: deluge-http
  - host: sonarr.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dl
            port:
              name: sonarr-http
  - host: nzb.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dl
            port:
              name: sabnzbd-http
  - host: radarr.home.ericcodes.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dl
            port:
              name: radarr-http
  - host: deluge.home.ericcodes.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dl
            port:
              name: deluge-http
  - host: sonarr.home.ericcodes.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dl
            port:
              name: sonarr-http
  - host: nzb.home.ericcodes.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dl
            port:
              name: sabnzbd-http
